[package]
name = "prometheus-bcachefs-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.8.4"
byte-unit = "5.1.6"
clap = { version = "4.5.16", features = ["derive", "env"] }
env_logger = "0.11.8"
http = "1.1.0"
log = "0.4.27"
tokio = { version = "1.40.0", default-features = false, features = ["macros", "rt"] }
uuid = "1.10.0"
